cod-tools (unreleased)

  * ...

cod-tools (2.10)

  * Added:
    - cif_validate:
      - a check that reports looped lists containing data items from more
        than one dictionary category;
      - a check that reports unique loop key violations;
      - a check that reports missing mandatory looped list data items.
    - COD::CIF::DDL::DDL1:
      - the get_category_name() subroutine;
      - the get_list_mandatory_flag() subroutine.
  * Changed:
    - cifvalues:
      - updated the help message.
    - cif_validate:
      - reworded a validation message to explicitly state that the composite
        loop reference requires collectively unique values;
      - updated the way validation messages are generated to ensure that
        the canonical form of data item names is used regardless of the
        underlying data structure.
    - COD::CIF::Data::CIF2COD:
      - implemented the handling of the 'gofref' column.
    - COD::CIF::Tags::DictTags:
      - added data item names from the 'cif_core_restraint.dic'
        and the 'cif_twinning.dic' CIF dictionary to the global
        '@tag_list' variable.
  * Removed:
      - the 'database-schemas/cif2cod.sql' file.
  * Fixed:
      - cif_list_tags:
        - a typo in an option name ('--vebose' to '--verbose').
      - COD::CIF::Data::CIF2COD:
        - changed the data item set from which the value for the 'gofobs' column
          is retrieved from ['_refine_ls_goodness_of_fit_ref'] to
          ['_refine_ls_goodness_of_fit_gt', '_refine_ls_goodness_of_fit_obs'].

cod-tools (2.9)

  * Changed:
    - COD::CIF::Data::CIF2COD:
      - updated the validate_SQL_types() subroutine to return an undef
        value instead of a value that is not compatible with the specified
        SQL CHAR/VARCHAR field;
      - updated the cif2cod() subroutine to determine the number of elements
        from the calculated formula instead of defaulting to '0' when the
        summary formula is not explicitly provided;