@@ -1,6 +1,8 @@
 cod-tools (unreleased)
 
-  * ...
+  * Added:
+    - COD::CIF::DDL:
+      - the get_category_name_from_local_data_name() subroutine.
 
 cod-tools (2.10)
 
